# wyndle

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  wyndle_demo_2x.mov
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.example.yaml
data/: conversations.example.duckdb
scripts/: forever-loader.sh  run-wyndle.sh  test.sh
src/: __init__.py  cli.py  config.py  models.py  repository.py  server.py
src/analysis/: __init__.py  org.py  persona.py
src/data/: __init__.py  duckdb_database.py  loader.py  name_resolver.py  optimized_schema.sql
src/ingest/: __init__.py  loader.py  runner.py
src/slack_client/: __init__.py  async_client.py  client.py
src/tests/: __init__.py  conftest.py  test_basic.py
